k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshmart
  namespace: freshmart
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: freshmart
