k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshmart-ingress
  namespace: freshmart
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx  # Add this line
  rules:
    - host: freshmart.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshmart
                port:
                  number: 80
